tests/snapshots/examples_fixtures/type_system__failing__161_tuple_destructure_concrete_mismatch_prefers_e300.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/161_tuple_destructure_concrete_mismatch_prefers_e300.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E300]: TYPE UNIFICATION ERROR

Cannot unify (_, _) with Int.

  --> examples/type_system/failing/161_tuple_destructure_concrete_mismatch_prefers_e300.flx:2:18
  |
2 |     let (a, b) = 1
  |                  ^
  |                  - expected (_, _), found Int
  |                  - destructure source type is known at compile time

Help:
  destructure source does not match pattern shape
== stdout ==
<not executed>
